--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -44,7 +44,7 @@
     <string name="about_version">版本: %1$s</string>
     <string name="detail_star">添加到收藏</string>
     <string name="detail_unstar">从收藏删除</string>
-    <string name="progress_loading">正在载入...</string>
+    <string name="progress_loading">正在载入…</string>
 
     <string name="sleep_timer" formatted="true">睡眠定时器： %1$02d:%2$02d</string>
     <string name="sleep_timer_title">运行多少分钟停止？</string>
@@ -107,16 +107,16 @@
     <string name="settings_equalizer">均衡器</string>
 
     <string name="settings_connectivity">连接</string>
-    <string name="settings_connect_timeout">流媒体连接超时</string>
-    <string name="settings_read_timeout">流媒体读取超时</string>
-    <string name="settings_retry_timeout">流媒体重连超时</string>
+    <string name="settings_connect_timeout">连接超时</string>
+    <string name="settings_read_timeout">读取超时</string>
+    <string name="settings_retry_timeout">重连超时</string>
     <string name="settings_retry_delay">重连延迟</string>
     <string name="settings_seconds_format">%d 秒</string>
     <string name="settings_milliseconds_format">%d 毫秒</string>
 
-    <string name="settings_warn_no_wifi">未使用 Wifi 时警告</string>
-    <string name="settings_warn_no_wifi_on">播放时无 Wifi 连接警告</string>
-    <string name="settings_warn_no_wifi_off">未使用 Wifi 连接时不警告</string>
+    <string name="settings_warn_no_wifi">无 WiFi 时警告</string>
+    <string name="settings_warn_no_wifi_on">播放时无 WiFi 连接警告</string>
+    <string name="settings_warn_no_wifi_off">未使用 WiFi 连接时不警告</string>
 
     <string name="settings_recordings">录音</string>
     <string name="settings_record_name_formatting">文件格式</string>
@@ -227,10 +227,14 @@
         <item>复制流媒体地址</item>
     </string-array>
 
-    <string name="no_wifi_title">无 WiFi (WLAN) 连接</string>
-    <string name="no_wifi_connection">播放 %1$s 时无 WiFi (WLAN) 连接，按 \'确认\' 继续。</string>
+    <string name="no_wifi_title">无 WiFi 连接</string>
+    <string name="no_wifi_connection">%1$s处于移动数据网络，每分钟平均消耗流量 0.8 MB，要继续播放吗？</string>
     <string name="nav_item_statistics">统计</string>
     <string name="nav_item_about">关于</string>
     <string name="settings_mpd_port">MPD 端口</string>
     <string name="refresh">刷新</string>
+
+    <!--TODO 这处翻译没有完成-->
+    <string name="alarm_time_start">定时收听开始了</string>
+    <string name="play_with_gprs">使用移动数据流量播放…</string>
 </resources>
